--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -9,6 +9,8 @@
       <li><a href="/my-blogs">View my Reviews</a></li>
       {% endif %}
       <li><a href="/about">About</a></li>
+      <li><a href="/map/">Map</a></li>
+
     </ul>
     <ul class="nav navbar-nav navbar-right">
       {% if session.login %}
@@ -21,6 +23,8 @@
       </li>
       <li>
         <a href="/register">Register</a>
+        <li>
+
       </li>
       {% endif %}
     </ul>
