--- a/templates/about.html
+++ b/templates/about.html
@@ -27,6 +27,14 @@
     We intend to build a points of interest (POI) explorer that allows users to discover, rate, and discuss parks, historical sites, and other significant landmarks within a specific city-region. Our proposed web application would serve as a centralized hub of landmark related information by utilizing open-source data to populate comprehensive listings. The existence of such a repository encourages both tourism and community engagement from residents as users' discoveries foster a sense of connection, city-identity, exploration, and boost the local economy. In short, the platform will engage residents and tourists while also promoting economic activity in a city-region.   
 
     As previously mentioned, the application will utilize open-source data which ensures that all content is freely accessible and reusable. In particular, data sets from OpenStreetMap, Wikimedia Commons, and various government / public domains will be used. Unlike alternative platforms / services such as Google Maps, which primarily serves as a mapping platform, or Yelp, which is primarily for crowd-sourced reviews about commercial businesses such as restaurants, our platform will primarily focus on community engagement and detailed exploration of sites through user-contributed stories, historical facts, and personal recommendations. The biggest difference between our proposed platform and services like Google or Yelp is the intended audience and the why. In our case, we are first serving tourists & residents with public and historically significant landmarks as the focus of the application, not commercial restaurants (Yelp) or mainly functioning as a general-purpose mapping application (Google Maps).  </p>
+
+
+    
+   
+    <script src="/static/main.js"></script> 
+    <!-- Include the Google Maps JavaScript API script here, with your API key     C:\Users\filmh\Documents\PythonFlaskTutorial\my-sample-project\frontJS
+--> 
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkW0iGM8DniteJO7xa_yEuJseeFGQJLBM&libraries=geometry&callback=initMap" async defer></script>
 </body>
 </html>
 
