--- a/templates/map.html
+++ b/templates/map.html
@@ -110,7 +110,7 @@ h1::after {
             <option value="all">All</option>
             <option value="Parks">Parks</option>
             <option value="HistoricalSites">HistoricalSites</option>
-            <option value="Landmarks">Landmarks</option>
+            <option value="Landmarks">LocalAttractions</option>
         </select>
         <br>
         <label for="categoryFilter" class="dropdown-label">Select Radius :</label>
