--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -8,8 +8,13 @@
       <li><a href="/write-blog">Write a new Review</a></li>
       <li><a href="/my-blogs">View my Reviews</a></li>
       {% endif %}
+      <li><a href="/search">Search</a></li> <!-- Add this line -->
+      <li><a href="/events">View Events</a></li> <!-- Added link to events -->
+      <li><a href="/points_of_interest">points_of_interest</a></li> <!-- Added link to events -->
+      <li><a href="/categories">categories</a></li> <!-- Added link to events -->
       <li><a href="/about">About</a></li>
       <li><a href="/map/">Map</a></li>
+
 
     </ul>
     <ul class="nav navbar-nav navbar-right">
