add more point of interest, change location display

--- a/templates/points_of_interest.html
+++ b/templates/points_of_interest.html
@@ -19,7 +19,7 @@
           <td>{{ poi['name'] }}</td>
           <td>{{ poi['description'] }}</td>
           <td>{{ poi['category_id'] }}</td>
-          <td>{{ poi['location'] }}</td>
+          <td>{{ poi.latitude }}, {{ poi.longitude }}</td>
           <td>{{ poi['user_id'] }}</td>
         </tr>
       {% endfor %}
