--- a/templates/base.html
+++ b/templates/base.html
@@ -2,26 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}My Website{% endblock %}</title>
-    <!-- Add any additional CSS or meta tags here -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='styles/main.css') }}" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+    <title>{% block title %}Points of Interest Explorer{% endblock %}</title>
+    <!-- Custom head content added by other templates -->
+    {% block head %}{% endblock %}
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <!-- Add more navigation links as needed -->
-        </ul>
-    </nav>
+    <header>
+        <!-- Navbar here if _navbar.html isn't used -->
+        {% block navbar %}{% include "_navbar.html" %}{% endblock %}
+    </header>
 
-    <div class="container">
-        {% block body %}
-        <!-- The content of each page will be inserted here -->
+    <main role="main" class="container">
+        {% block content %}
+        <!-- The main content of each page will be inserted here -->
         {% endblock %}
-    </div>
+    </main>
 
-    <footer>
-        <p>&copy; 2024 My Website</p>
+    <footer class="footer mt-auto py-3">
+        <div class="container">
+            <span>&copy; 2024 Points of Interest Explorer. All rights reserved.</span>
+        </div>
     </footer>
-    <!-- Add any addi
+
+    <!-- Custom scripts added by other templates -->
+    {% block scripts %}{% endblock %}
+</body>
+</html>
