--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,21 +1,35 @@
 {% extends "layout.html" %}
 
 {% block sub_content %}
-<div class="container text-center">
-    <h1>{{ blog['title'] }}</h1>
-</div>
-<hr>
-<div class="container">
-    <p>{{ blog['body'] | safe }}</p>
-</div>
-<hr>
-<div class="container text-left">
-    <p>Written by: {{ blog['author'] }}</p>
-    <p>Rating: 
-        {% for _ in range(blog['rating']) %}
-            &#9733; <!-- Star icon -->
-        {% endfor %}
-    </p>
-    <p>Date Posted: {{ blog['posted_date'].strftime('%Y-%m-%d') }}</p>  {# Format date if needed #}
+<div class="container mt-4 mb-4">
+    <div class="row">
+        <div class="col">
+            <h1 class="display-4">{{ blog['title'] }}</h1>
+            <hr class="my-4">
+            <div class="lead" style="white-space: pre-wrap;">{{ blog['body'] | safe }}</div>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-md-6 text-muted">
+            <p class="mb-2">Written by: {{ blog['author'] }}</p>
+            <p class="mb-2">Date Posted: {{ blog['posted_date'].strftime('%Y-%m-%d') }}</p>  {# Format date if needed #}
+        </div>
+        <div class="col-md-6">
+            <p class="mb-2">Rating: 
+                {% for _ in range(blog['rating']) %}
+                    <span class="text-warning">&#9733;</span> <!-- Star icon -->
+                {% else %}
+                    <span class="text-muted">&#9734;</span> <!-- Empty star icon -->
+                {% endfor %}
+            </p>
+            {% if session['user_id'] == blog['author_id'] %}
+            <div class="mb-2">
+                <a href="{{ url_for('edit_blog', id=blog['blog_id']) }}" class="btn btn-primary">Edit</a>
+                <a href="{{ url_for('delete_blog', id=blog['blog_id']) }}" class="btn btn-danger">Delete</a>
+            </div>
+            {% endif %}
+        </div>
+    </div>
 </div>
 {% endblock %}
