--- a/templates/edit_blog.html
+++ b/templates/edit_blog.html
@@ -1,43 +1,51 @@
-{%extends "layout.html" %}
+{% extends "layout.html" %}
 
 {% block sub_content %}
-<div class="text-center">
-  <h1> Edit Blog </h1>
+<div class="container my-4">
+    <h1 class="text-center mb-4"> Edit Blog Post </h1>
+    <form method="POST">
+        <div class="form-group row">
+            <label for="title" class="col-sm-2 col-form-label">Title:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" name="title" id="title" value="{{ blog_form['title'] }}" required>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label for="body" class="col-sm-2 col-form-label">Body:</label>
+            <div class="col-sm-10">
+                <textarea class="form-control ckeditor" name="body" id="body" rows="4" required>{{ blog_form['body'] }}</textarea>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label for="rating" class="col-sm-2 col-form-label">Rating:</label>
+            <div class="col-sm-10">
+                <input type="number" class="form-control" name="rating" id="rating" min="1" max="5" value="{{ blog_form['rating'] }}" required>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <label for="posted_date" class="col-sm-2 col-form-label">Posted Date:</label>
+            <div class="col-sm-10">
+                <input type="date" class="form-control" name="posted_date" id="posted_date" value="{{ blog_form['posted_date'] }}" required>
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <div class="col-sm-10 offset-sm-2">
+                <button type="submit" class="btn btn-primary">Update Post</button>
+            </div>
+        </div>
+    </form>
 </div>
-<form class="form-horizontal" method="POST">
-  <div class="form-group">
-    <label class="control-label col-sm-2">Title</label>
-    <div class="col-sm-5">
-      <input type="text" name="title" value="{{ blog_form['title'] }}"> </input>
-    </div>
-  </div>
-
-    <div class="form-group">
-      <label class="control-label col-sm-2">Body</label>
-      <div class="col-sm-5">
-        <textarea class="ckeditor" name="body">{{ blog_form['body'] }}</textarea>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="Submit" >Submit </button>
-      </div>
-    </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2">Rating</label>
-      <div class="col-sm-5">
-        <input type="number" name="rating" min="1" max="5" required />
-      </div>
-    </div>
-    
-    <div class="form-group">
-      <label class="control-label col-sm-2">Posted Date</label>
-      <div class="col-sm-5">
-        <input type="date" name="posted_date" required />
-      </div>
-    </div>
-    
-
-</form>
 {% endblock %}
+
+{% block scripts %}
+{{ super() }}
+<script>
+    // Initialize CKEditor
+    CKEDITOR.replace('body');
+</script>
+{% endblock %}
+
