--- a/templates/events.html
+++ b/templates/events.html
@@ -1,28 +1,41 @@
 {% extends "layout.html" %}
+
 {% block sub_content %}
-  <h1>Events</h1>
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>User ID</th>
-        <th>Title</th>
-        <th>Description</th>
-        <th>Date</th>
-        <th>Location</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for event in events %}
-        <tr>
-          <td>{{ event['event_id'] }}</td>
-          <td>{{ event['user_id'] }}</td>
-          <td>{{ event['title'] }}</td>
-          <td>{{ event['description'] }}</td>
-          <td>{{ event['event_date'] }}</td>
-          <td>{{ event['location'] }}</td>
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+<div class="container mt-4">
+    <h1 class="mb-4 text-center">Upcoming Events</h1>
+
+    {% if events %}
+        <div class="table-responsive">
+            <table class="table table-hover">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">Hosted By</th>
+                        <th scope="col">Title</th>
+                        <th scope="col">Description</th>
+                        <th scope="col">Date</th>
+                        <th scope="col">Location</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for event in events %}
+                        <tr>
+                            <td>{{ event['event_id'] }}</td>
+                            <td>{{ event['host_username'] }}</td>
+                            <td>{{ event['title'] }}</td>
+                            <td>{{ event['description'] }}</td>
+                            <td>{{ event['event_date'] }}</td>
+                            <td>{{ event['location'] }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    {% else %}
+        <div class="alert alert-info" role="alert">
+            No upcoming events found.
+        </div>
+    {% endif %}
+</div>
 {% endblock %}
+
