--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,20 +1,33 @@
 {% extends "bootstrap/base.html" %}
 
-{%block head %}
-<head> {{ ckeditor.load() }} </head>
-{{super()}}
+{% block head %}
+<head>
+    {{ super() }}  <!-- Inherits everything within the head block from base.html -->
+    {{ ckeditor.load() }}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select/dist/css/bootstrap-select.min.css">
+    <!-- You can add more custom CSS files here -->
+</head>
 {% endblock %}
 
-{% block title %}
-PointsOfExplorer
-{% endblock %}
+{% block title %}PointsOfExplorer{% endblock %}
 
 {% block navbar %}
-  {% include "_navbar.html" %}
+    {% include "_navbar.html" %}
 {% endblock %}
 
 {% block content %}
-  {% include "_messages.html" %}
-  {% block sub_content %}
-  {% endblock %}
+    {% include "_messages.html" %}
+    {% block sub_content %}
+    {% endblock %}
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}  <!-- Inherits scripts from base.html if there are any -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('.selectpicker').selectpicker();
+        });
+    </script>
+    <!-- Here you can add more custom JS files -->
 {% endblock %}
