--- a/templates/login.html
+++ b/templates/login.html
@@ -1,30 +1,43 @@
-{%extends "layout.html" %}
+{% extends "layout.html" %}
 
 {% block sub_content %}
-<div class="text-center">
-  <h1> User Login </h1>
+<div class="container mt-4">
+    <h1 class="text-center mb-4">User Login</h1>
+    <form method="POST" class="form-horizontal" role="form">
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="username">Username:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="username" name="username" placeholder="Enter username" required>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-sm-2" for="password">Password:</label>
+            <div class="col-sm-10">
+                <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+        </div>
+
+        <div class="text-center">
+            <p>Don't have an account? <a href="/register">Register here</a></p>
+        </div>
+
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <div class="alert alert-danger">
+                {% for category, message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+        {% endwith %}
+    </form>
 </div>
-<form class="form-horizontal" method="POST">
-
-  <div class="form-group">
-    <label class="control-label col-sm-2">Username</label>
-    <div class="col-sm-5">
-      <input type="text" name="username"/>
-    </div>
-  </div>
-
-    <div class="form-group">
-      <label class="control-label col-sm-2">Password</label>
-      <div class="col-sm-5">
-        <input type="password" name="password"/>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="Submit" >Submit </button>
-      </div>
-    </div>
-
-</form>
 {% endblock %}
+
