--- a/templates/my_blogs.html
+++ b/templates/my_blogs.html
@@ -2,7 +2,7 @@
 
 {% block sub_content %}
 <div class="container my-4">
-    <h2 class="text-center mb-4">My Reviews</h2>
+    <h2 class="text-center mb-4">My Blog</h2>
     {% if my_blogs %}
         <div class="table-responsive">
             <table class="table">
