--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -6,12 +6,21 @@
       <li class="nav-item">
         <a class="nav-link" href="/">Home</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/about">About</a>
+      </li>
       {% if session['login'] %}
       <li class="nav-item">
-        <a class="nav-link" href="/write-blog">Write a New Review</a>
+        <a class="nav-link" href="/add-poi">Add a POI</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/my-blogs">View My Reviews</a>
+        <a class="nav-link" href="/write-review">Write a New Review</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/create-event">Create an Event</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/my-blogs">View My Blog</a>
       </li>
       {% endif %}
       <li class="nav-item">
@@ -25,9 +34,6 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/categories">Categories</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/about">About</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/map">Map</a>
