--- a/templates/blog.html
+++ b/templates/blog.html
@@ -23,7 +23,7 @@
                     <span class="text-muted">&#9734;</span> <!-- Empty star icon -->
                 {% endfor %}
             </p>
-            {% if session['user_id'] == blog['author_id'] %}
+            {% if session['username'] == blog['author_id'] %}
             <div class="mb-2">
                 <a href="{{ url_for('edit_blog', id=blog['blog_id']) }}" class="btn btn-primary">Edit</a>
                 <a href="{{ url_for('delete_blog', id=blog['blog_id']) }}" class="btn btn-danger">Delete</a>
