--- a/templates/write_review.html
+++ b/templates/write_review.html
@@ -15,16 +15,9 @@
     </div>
 
     <div class="form-group row">
-      <label for="title" class="col-sm-2 col-form-label">Title:</label>
+      <label for="body" class="col-sm-2 col-form-label">Review:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" name="title" id="title" required />
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="body" class="col-sm-2 col-form-label">Body:</label>
-      <div class="col-sm-10">
-        <textarea class="form-control" name="body" id="body" rows="4" required></textarea>
+        <textarea class="form-control" name="comment" id="comment" rows="4" required></textarea>
       </div>
     </div>
 
