more fixes, comment out blogs, final edits

--- a/templates/edit_event.html
+++ b/templates/edit_event.html
@@ -18,10 +18,17 @@
             <input type="date" class="form-control" id="event_date" name="event_date" value="{{ event.event_date }}" required>
         </div>
         <div class="form-group">
-            <label for="location">Location:</label>
-            <input type="text" class="form-control" id="location" name="location" value="{{ event.location }}" required>
+            <label for="poi_id">Point of Interest</label>
+            <select class="form-control" id="poi_id" name="poi_id" required>
+                {% for poi in pois %}
+                    <option value="{{ poi.poi_pid }}">{{ poi.name }}</option>
+                {% endfor %}
+            </select>
         </div>
         <button type="submit" class="btn btn-primary">Update Event</button>
+    </form>
+    <form action="{{ url_for('delete_event', event_id=event.event_id) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this event?');">
+        <button type="submit" class="btn btn-danger">Delete Event</button>
     </form>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
