--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -19,9 +19,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/create-event">Create an Event</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/my-blogs">View My Blog</a>
-      </li>
+      <!-- <li class="nav-item"> -->
+      <!--   <a class="nav-link" href="/discover-blogs">Discover Blog</a> -->
+      <!-- </li> -->
       {% endif %}
       <li class="nav-item">
         <a class="nav-link" href="/search">Search</a>
