--- a/templates/blog.html
+++ b/templates/blog.html
@@ -4,29 +4,29 @@
 <div class="container mt-4 mb-4">
     <div class="row">
         <div class="col">
-            <h1 class="display-4">{{ blog['title'] }}</h1>
+            <h1 class="display-4">{{ blogs['title'] }}</h1>
             <hr class="my-4">
-            <div class="lead" style="white-space: pre-wrap;">{{ blog['body'] | safe }}</div>
+            <div class="lead" style="white-space: pre-wrap;">{{ blogs['body'] | safe }}</div>
         </div>
     </div>
     <hr>
     <div class="row">
         <div class="col-md-6 text-muted">
-            <p class="mb-2">Written by: {{ blog['author'] }}</p>
-            <p class="mb-2">Date Posted: {{ blog['posted_date'].strftime('%Y-%m-%d') }}</p>  {# Format date if needed #}
+            <p class="mb-2">Written by: {{ blogs['author'] }}</p>
+            <p class="mb-2">Date Posted: {{ blogs['posted_date'].strftime('%Y-%m-%d') }}</p>  {# Format date if needed #}
         </div>
         <div class="col-md-6">
             <p class="mb-2">Rating: 
-                {% for _ in range(blog['rating']) %}
+                {% for _ in range(blogs['rating']) %}
                     <span class="text-warning">&#9733;</span> <!-- Star icon -->
                 {% else %}
                     <span class="text-muted">&#9734;</span> <!-- Empty star icon -->
                 {% endfor %}
             </p>
-            {% if session['username'] == blog['author_id'] %}
+            {% if session['username'] == blogs['author_id'] %}
             <div class="mb-2">
-                <a href="{{ url_for('edit_blog', id=blog['blog_id']) }}" class="btn btn-primary">Edit</a>
-                <a href="{{ url_for('delete_blog', id=blog['blog_id']) }}" class="btn btn-danger">Delete</a>
+                <a href="{{ url_for('edit_blog', id=blogs['blog_id']) }}" class="btn btn-primary">Edit</a>
+                <a href="{{ url_for('delete_blog', id=blogs['blog_id']) }}" class="btn btn-danger">Delete</a>
             </div>
             {% endif %}
         </div>
