--- a/templates/create_event.html
+++ b/templates/create_event.html
@@ -18,8 +18,12 @@
                 <input type="date" class="form-control" id="event_date" name="event_date" required>
             </div>
             <div class="form-group">
-                <label for="location">Location:</label>
-                <input type="text" class="form-control" id="location" name="location" required>
+                <label for="poi_id">Point of Interest</label>
+                <select class="form-control" id="poi_id" name="poi_id" required>
+                    {% for poi in pois %}
+                        <option value="{{ poi.poi_pid }}">{{ poi.name }}</option>
+                    {% endfor %}
+                </select>
             </div>
             <button type="submit" class="btn btn-primary">Create Event</button>
         </form>
