--- a/templates/events.html
+++ b/templates/events.html
@@ -26,7 +26,7 @@
                             <td>{{ event['title'] }}</td>
                             <td>{{ event['description'] }}</td>
                             <td>{{ event['event_date'] }}</td>
-                            <td>{{ event['location'] }}</td>
+                            <td>{{ event['poi_name'] }}</td>
                             <td>
                             <!-- Check if the logged-in user is the host of the event -->
                             {% if session['username'] == event.host_username %}
